...
                android:id="@+id/imageView4"
                android:layout_width="36dp"
                android:layout_height="43dp"
                app:srcCompat="@drawable/ic_name" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:gravity="center"
                android:text="User Name" />

...
        android:text="Location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
<!--
    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_tune_profile_page"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
...
