...
                    android:id="@+id/imageView"
                    android:layout_width="51dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_person_profile" />

                <EditText
                    android:id="@+id/editUserName"
                    android:layout_width="167dp"
                    android:layout_height="47dp"
                    android:backgroundTint="#F8F6F6"
                    android:ems="10"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="0.719" />

        <Button
            android:id="@+id/save_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toEndOf="@+id/return_btn"
...
